--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /*overflow: hidden;*/
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html, body, .root {
+  @apply h-full flex flex-col justify-center bg-gray-100;
 }
