--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,6 @@ code {
     monospace;
 }
 
-html, body, .root {
-  @apply h-full flex flex-col justify-center bg-gray-100;
+html, body, #root {
+  @apply h-full w-full flex justify-center bg-gray-100;
 }
